Sort of finished the nav menu, mobile/smal screen version

--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
 
 <body>
 
-    <h1>icon</h1>
-    <span class="material-symbols-outlined">
-        home
-    </span>
+    <nav class="nav">
+        <span class="material-symbols-outlined menu">menu</span>
+        <img src="assets/logo.png" alt="köket logo">
+        <div class="nav-icons">
+            <span class="material-symbols-outlined search">search</span>
+            <span class="material-symbols-outlined smily">sentiment_satisfied</span>
+        </div>
+    </nav>
+    <header></header>
+    <main></main>
+    <footer></footer>
+
 </body>
 
 </html>
