made the nav stick to the top of the screen

--- a/index.html
+++ b/index.html
@@ -22,7 +22,45 @@
         </div>
     </nav>
     <header></header>
-    <main></main>
+    <main>
+        <p>line</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
+            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
+        </p>
+    </main>
     <footer></footer>
 
 </body>
