With @media, the nav now changes at 2024px into a bigger version that has a nav-menu. Also added some hovering and colouring

--- a/index.html
+++ b/index.html
@@ -14,11 +14,47 @@
 <body>
 
     <nav class="nav">
-        <span class="material-symbols-outlined menu">menu</span>
+        <div class="menu-icon">
+            <span class="material-symbols-outlined menu">menu</span>
+        </div>
         <img src="assets/logo.png" alt="köket logo">
         <div class="nav-icons">
             <span class="material-symbols-outlined search">search</span>
-            <span class="material-symbols-outlined smily">sentiment_satisfied</span>
+            <span class="material-symbols-outlined smiley">sentiment_satisfied</span>
+        </div>
+        <div class="nav-links">
+            <ul>
+                <li><span class="material-symbols-outlined">
+                        book_2
+                    </span>Recept</li>
+                <li><span class="material-symbols-outlined">
+                        school
+                    </span>Kockar</li>
+                <li><span class="material-symbols-outlined">
+                        wine_bar
+                    </span>Dryck</li>
+                <li><span class="material-symbols-outlined">
+                        tv
+                    </span>TV-program</li>
+                <li><span class="material-symbols-outlined">
+                        play_arrow
+                    </span>Play</li>
+                <li><span class="material-symbols-outlined">
+                        blender
+                    </span>Hem & Kök</li>
+                <li><span class="material-symbols-outlined">
+                        license
+                    </span>Kurser</li>
+                <li><span class="material-symbols-outlined">
+                        nutrition
+                    </span>Trädgård</li>
+                <li><span class="material-symbols-outlined">
+                        search
+                    </span>Sök</li>
+            </ul>
+        </div>
+        <div class="smiley-icon">
+            <span class="material-symbols-outlined smile">sentiment_satisfied</span>
         </div>
     </nav>
     <header></header>
