Trying to make the header, close to crying

--- a/index.html
+++ b/index.html
@@ -57,7 +57,25 @@
             <span class="material-symbols-outlined smile">sentiment_satisfied</span>
         </div>
     </nav>
-    <header></header>
+    <header class="header">
+        <div class="image-wrapper">
+            <img src="assets/banner.jpg" alt="">
+            <div class="inner-wrapper">
+                <!-- <img class="header-logo" src="assets/logo.png" alt=""> -->
+                <div class="options">
+                    <ul>
+                        <li>Nylagat i TV</li>
+                        <li>Vardgasmiddag</li>
+                        <li>Enkla Kycklingrecept</li>
+                        <li>Chokladbollar</li>
+                        <li>Lax i ugn</li>
+                        <li>Bakat och gott</li>
+                        <li>Gå våra kurser</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
     <main>
         <p>line</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
