I think the header is done, no promises

--- a/index.html
+++ b/index.html
@@ -58,10 +58,39 @@
         </div>
     </nav>
     <header class="header">
+        <div class="header-logo">
+            <img src="assets/logo.png" alt="">
+        </div>
+        <div class="search-bar">
+        </div>
+        <div class="options">
+            <ul>
+                <li>Nylagat i TV</li>
+                <li>Vardgasmiddag</li>
+                <li>Enkla Kycklingrecept</li>
+                <li>Chokladbollar</li>
+                <li>Lax i ugn</li>
+                <li>Bakat och gott</li>
+                <li class="special">Gå våra kurser</li>
+            </ul>
+        </div>
+    </header>
+    <main class="main">
+        <div class="big-box">
+
+        </div>
+    </main>
+    <footer></footer>
+
+</body>
+
+</html>
+
+<!-- <header class="header">
         <div class="image-wrapper">
             <img src="assets/banner.jpg" alt="">
             <div class="inner-wrapper">
-                <!-- <img class="header-logo" src="assets/logo.png" alt=""> -->
+                
                 <div class="options">
                     <ul>
                         <li>Nylagat i TV</li>
@@ -75,48 +104,4 @@
                 </div>
             </div>
         </div>
-    </header>
-    <main>
-        <p>line</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni sint architecto dolor est, nostrum
-            labore quia animi possimus expedita illo ad fugiat ratione veniam saepe repudiandae, mollitia vero soluta!
-        </p>
-    </main>
-    <footer></footer>
-
-</body>
-
-</html>
+    </header> -->
