Started making the main div-boxes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
     </header>
     <main class="main">
         <div class="big-box">
+            <img src="assets/korvstroganoff-extra-allt.png.webp" alt="">
+            <div class="title-text">
 
+            </div>
+        </div>
+        <div class="big-box">
+            <img src="assets/gnocchi-med-kramig-tomatsas-och-mozzarella.png.webp" alt="">
         </div>
     </main>
     <footer></footer>
