Made good progress on the main divs

--- a/index.html
+++ b/index.html
@@ -78,13 +78,52 @@
     <main class="main">
         <div class="big-box">
             <img src="assets/korvstroganoff-extra-allt.png.webp" alt="">
-            <div class="title-text">
 
+            <div class="text-box">
+                <div class="title-text">
+                    <span>BÄSTA MATLÅDEMATEN</span>
+                </div>
+                <div class="smal-text">
+                    <p>12 rätter som passar extra bra att lägga i matlådan.</p>
+                </div>
             </div>
+
+
         </div>
         <div class="big-box">
             <img src="assets/gnocchi-med-kramig-tomatsas-och-mozzarella.png.webp" alt="">
         </div>
+
+        <div class="big-box">
+            <img src="assets/korvstroganoff-extra-allt.png.webp" alt="">
+
+            <div class="text-box">
+                <div class="title-text">
+                    <span>BÄSTA MATLÅDEMATEN</span>
+                </div>
+                <div class="smal-text">
+                    <p>12 rätter som passar extra bra att lägga i matlådan.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="big-box">
+            <img src="assets/korvstroganoff-extra-allt.png.webp" alt="">
+
+            <div class="text-box">
+                <div class="title-text">
+                    <span>BÄSTA MATLÅDEMATEN</span>
+                </div>
+                <div class="smal-text">
+                    <p>12 rätter som passar extra bra att lägga i matlådan.</p>
+                </div>
+            </div>
+        </div>
+
+
+        </div>
+
+
     </main>
     <footer></footer>
 
