Talked with Asaf, making a commit before I start testing stuff

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
         <div class="nav-links">
             <ul>
+                <!-- make the text another div -->
                 <li><span class="material-symbols-outlined">
                         book_2
                     </span>Recept</li>
@@ -61,8 +62,7 @@
         <div class="header-logo">
             <img src="assets/logo.png" alt="">
         </div>
-        <div class="search-bar">
-        </div>
+        <div class="search-bar"></div>
         <div class="options">
             <ul>
                 <li>Nylagat i TV</li>
@@ -119,11 +119,7 @@
                 </div>
             </div>
         </div>
-
-
         </div>
-
-
     </main>
     <footer></footer>
 
