Added 2 classes to make a big box seem like a sponsored div

--- a/index.html
+++ b/index.html
@@ -88,37 +88,44 @@
                 </div>
             </div>
 
-
         </div>
         <div class="big-box">
             <img src="assets/gnocchi-med-kramig-tomatsas-och-mozzarella.png.webp" alt="">
-        </div>
-
-        <div class="big-box">
-            <img src="assets/korvstroganoff-extra-allt.png.webp" alt="">
-
             <div class="text-box">
                 <div class="title-text">
-                    <span>BÄSTA MATLÅDEMATEN</span>
+                    <span>SIRI BARJES BÄSTA VEGORÄTTER</span>
                 </div>
                 <div class="smal-text">
-                    <p>12 rätter som passar extra bra att lägga i matlådan.</p>
+                    <p>Med Siris recept blir det lätt och gott att laga vego.</p>
                 </div>
             </div>
         </div>
 
         <div class="big-box">
-            <img src="assets/korvstroganoff-extra-allt.png.webp" alt="">
-
+            <img src="assets/ostiga-fattiga-riddare-med-avokadodipp.png.webp" alt="">
             <div class="text-box">
                 <div class="title-text">
-                    <span>BÄSTA MATLÅDEMATEN</span>
+                    <span>MACKA TILL MIDDAG?</span>
                 </div>
                 <div class="smal-text">
-                    <p>12 rätter som passar extra bra att lägga i matlådan.</p>
+                    <p>Javisst, ibland vill man bara äta en riktigt god och matig macka till middag.</p>
                 </div>
             </div>
         </div>
+
+        <div class="big-box">
+            <img src="assets/lithells-falukorvsgryta-med-sweet-chili.png copy.webp" alt="">
+            <div class="sponsored-tag">
+                <span>Sponsrat</span>
+            </div>
+            <div class="text-box">
+                <div class="title-text-sponsored">
+                    <span>KRÄMIG FALUKORVSGRYTA MED SWEET CHILI</span>
+                </div>
+                <div class="smal-text">
+                    <p>En riktig vardagsräddare som älskas av hela familjen.</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer></footer>
