Not completely happy with the smal-box divs, but they work

--- a/index.html
+++ b/index.html
@@ -133,29 +133,30 @@
                 </div>
             </div>
         </div>
+
+        <div class="smal-box">
+            <div class="smal-text">
+                <p>24 klassiska små kakor</p>
+            </div>
+        </div>
+        <div class="smal-box">
+            <div class="smal-text">
+                <p>24 klassiska små kakor</p>
+            </div>
+        </div>
+        <div class="smal-box">
+            <div class="smal-text">
+                <p>24 klassiska små kakor</p>
+            </div>
+        </div>
+        <div class="smal-box">
+            <div class="smal-text">
+                <p>24 klassiska små kakor</p>
+            </div>
+        </div>
     </main>
     <footer></footer>
 
 </body>
 
 </html>
-
-<!-- <header class="header">
-        <div class="image-wrapper">
-            <img src="assets/banner.jpg" alt="">
-            <div class="inner-wrapper">
-                
-                <div class="options">
-                    <ul>
-                        <li>Nylagat i TV</li>
-                        <li>Vardgasmiddag</li>
-                        <li>Enkla Kycklingrecept</li>
-                        <li>Chokladbollar</li>
-                        <li>Lax i ugn</li>
-                        <li>Bakat och gott</li>
-                        <li>Gå våra kurser</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </header> -->
