--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <p>i am foot</p>
+        </div>
+    </footer>
 
 </body>
 
