FIXING LAST SECOND STUFF

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         </div>
         <div class="nav-links">
             <ul>
-                <!-- make the text another div -->
                 <li><span class="material-symbols-outlined">
                         book_2
                     </span>Recept</li>
@@ -134,31 +133,32 @@
             </div>
         </div>
 
+        <div class="smal-box smal-box-background-beet">
+            <div class="smal-text">
+                <p>Säsong för ramslök</p>
+            </div>
+        </div>
+
         <div class="smal-box">
             <div class="smal-text">
                 <p>24 klassiska små kakor</p>
             </div>
         </div>
-        <div class="smal-box">
+
+        <div class="smal-box  smal-box-background-man">
             <div class="smal-text">
-                <p>24 klassiska små kakor</p>
+                <p>Plantera en provencalsk örtkruka</p>
             </div>
         </div>
-        <div class="smal-box">
-            <div class="smal-text">
-                <p>24 klassiska små kakor</p>
-            </div>
+
+        <div class="smal-box smal-box-background-textBackground">
         </div>
-        <div class="smal-box">
-            <div class="smal-text">
-                <p>24 klassiska små kakor</p>
-            </div>
-        </div>
+
     </main>
 
     <footer>
         <div>
-            <p>i am foot</p>
+            <p>i am footer</p>
         </div>
     </footer>
 
